--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,51 @@
 :root {
   --background-color: #1f0b90;
   --background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  --color-one: darkmagenta;
-  --color-two: lightsteelblue;
+  --color-one: black;
+  --color-two: ivory;
+}
+
+html {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar {
+  display: block;
 }
 
 body {
   font-family: "Inconsolata", monospace;
   background-color: var(--background-color);
   background-image: var(--background);
-  display: grid;
   box-sizing: border-box;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+  padding: 20px;
+}
+.card {
+  background: var(--color-two);
+  padding: 1rem;
+  border: 2px solid var(--color-one);
+  border-radius: 3px;
+}
+.card img {
+  width: 100%;
+  border: 1px solid var(--color-one);
+  border-radius: 3px;
+}
+
+.modal-outer {
+  display: grid;
+  background: hsla(60, 100%, 50%, 0.6);
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
 }
