--- a/styles.css
+++ b/styles.css
@@ -48,4 +48,26 @@ body {
   width: 100vw;
   top: 0;
   left: 0;
+  justify-content: center;
+  align-items: center;
+  /* bleow: disarming the modal until needed */
+  opacity: 0;
+  pointer-events: none;
+  /* fading effect */
+  transition: opacity 0.2s;
+}
+
+.modal-outer.open {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.modal-inner {
+  max-width: 600px;
+  min-width: 400px;
+  min-height: 200px;
+  background: var(--color-two);
+  padding: 2rem;
+  border: 1px solid var(--color-one);
+  border-radius: 3px;
 }
