--- a/styles.css
+++ b/styles.css
@@ -70,4 +70,11 @@ body {
   padding: 2rem;
   border: 1px solid var(--color-one);
   border-radius: 3px;
+  /* slide-down animation */
+  transform: translateY(-200%);
+  transition: transform 1s;
+}
+
+.modal-outer.open .modal-inner {
+  transform: translateY(0%);
 }
